--- a/frontend/management-frontend/src/index.css
+++ b/frontend/management-frontend/src/index.css
@@ -35,9 +35,9 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
+/* button {
   border: 1px solid transparent;
+  border-radius: 8px;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -45,7 +45,8 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
+} */
+
 button:hover {
   border-color: #646cff;
 }
